--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "project-portfolio",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,18 +10,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "bun": "^1.1.30",
+    "gemini": "^7.5.2",
+    "langchain": "^0.3.2",
+    "next": "14.2.4",
+    "openai": "^4.67.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "shadcn-ui": "^0.9.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.14",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "typescript": "^5"
   }
 }
