--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.2.0",
     "axios": "^1.7.7",
     "bun": "^1.1.30",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.8",
     "gemini": "^7.5.2",
     "langchain": "^0.3.2",
+    "lucide-react": "^0.453.0",
     "next": "14.2.4",
     "openai": "^4.67.3",
     "react": "^18",
     "react-dom": "^18",
     "shadcn-ui": "^0.9.2",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
